// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeBigint should return false for {} 1`] = `
Object {
  "message": "    
    expected should be an bigInt.
    got: object
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for 1 1`] = `
Object {
  "message": "    
    expected should be an bigInt.
    got: number
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for Symbol() 1`] = `
Object {
  "message": "    
    expected should be an bigInt.
    got: symbol
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for aa 1`] = `
Object {
  "message": "    
    expected should be an bigInt.
    got: string
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for asymmetricMatcher of any value that is not bigint 1`] = `
Object {
  "message": "    
    expected should be an bigInt.
    got: object
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for bigint with isNot true 1`] = `
Object {
  "message": "    
    expected should not be an bigInt.
    got: bigint
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for null 1`] = `
Object {
  "message": "    
    expected should be an bigInt.
    got: null
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for undefined 1`] = `
Object {
  "message": "    
    expected should be an bigInt.
    got: undefined
",
  "pass": false,
}
`;
